--- a/alan_website/templates/index.html
+++ b/alan_website/templates/index.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{%block title%}Home{% endblock %}
 
-{%block content %}
+{% block title %}Home{% endblock %}
+
+{% block content %}
+
+ <!-- Masthead-->
+ <header class="masthead text-white text-center">
+    <div class="container d-flex align-items-center flex-column">
+        <!-- Masthead Avatar Image-->
+        <img class="masthead-avatar mb-5" src="{% static 'img/hs-logo-round.png' %}" alt="" />
+        <!-- Masthead Heading-->
+        <h1 class="masthead-heading text-uppercase mb-0">We Make Things</h1>
+    </div>
+</header>
+
 <h1>
-    Template Homepage
+    Home
 </h1>
+
 {% endblock %}
